--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "chart.js": "^4.4.0",
     "mongodb": "^6.3.0",
     "next": "15.3.3",
