--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^15.3.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@types/node": "^20",
