--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "chart.js": "^4.4.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.263.1",
     "mongodb": "^6.3.0",
     "next": "^15.3.3",
     "papaparse": "^5.4.1",
@@ -17,7 +25,6 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.8.0",
-    "chart.js": "^4.4.0",
     "tailwind-merge": "^2.2.0",
     "xlsx": "^0.18.5"
   },
